# xdrfile

./: .travis.yml  Cargo.toml  README.md  README.tpl
src/: errors.rs  iterator.rs  lib.rs  xtc.rs
src/c_abi/: mod.rs  xdrfile_xtc.rs
