[package]
name = "xdrfile"
version = "0.3.0"
authors = ["Daniel Bauer <bauer@cbs.tu-darmstadt.de>"]
license = "LGPL-3.0-only"
edition = "2018"
repository = "https://github.com/danijoo/xdrfile"
readme = "README.md"
keywords = ["bioinformatics", "molecular-dynamics", "GROMACS", "trajectory", "xtc"]
description = "Wrapper around the GROMACS libxdrfile library. Can be used to read and write GROMACS trajectories in xtc and trr format."
categories = ["api-bindings", "external-ffi-bindings", "science", "encoding"]
build = "build.rs"

[badges]
travis-ci = { repository = "danijoo/xdrfile", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
lazy-init = "0.3"

[dev-dependencies]
tempfile = "3.1.0"
assert_approx_eq = "1.1.0"
criterion = "0.3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel" ]}

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "benchmarks"
harness = false
